# data-forge

./: .gitignore  README.md  pyproject.toml
docs/: architecture.md  benchmark_strategy.md  google_drive_storage.md
niches/text-to-sql/: README.md  benchmark_plan.md  config.json  config_spider_gap.json  dataset_contract.md  finetune_qwen4b_lora.md  local_baseline_mlx.md  proof_plan.md
niches/text-to-sql/batch_plans/: pilot_001.md
niches/text-to-sql/examples/: accepted_row.json  rejected_row.json
niches/text-to-sql/prompts/: codex_judge_rubric.md  deepseek_generator.md  orchestrator_spec.md
niches/text-to-sql/scripts/: apply_text_to_sql_review.py  build_spider_prompt_pack.py  build_text_to_sql_review_viewer.py  compare_eval_reports.py  compare_mlx_sft_split.py  compare_qwen35_sft_split.py  evaluate_sql_predictions.py  export_text_to_sql_dataset.py  export_text_to_sql_sft.py  generate_text_to_sql_batch.py  merge_text_to_sql_shards.py  render_generation_progress.py  run_hf_text_to_sql_inference.py  run_mlx_text_to_sql_inference.py  run_text_to_sql_loop.py  run_text_to_sql_sharded.py  select_sql_predictions.py  signoff_text_to_sql_dataset.py  train_qwen35_lora_local.py  validate_text_to_sql_batch.py
niches/text-to-sql/tests/: test_text_to_sql_eval.py  test_text_to_sql_gates.py  test_text_to_sql_review.py  test_text_to_sql_shards.py
scripts/: apply_text_to_sql_review.py  build_text_to_sql_review_viewer.py  export_text_to_sql_dataset.py  export_text_to_sql_sft.py  generate_text_to_sql_batch.py  run_text_to_sql_loop.py  signoff_text_to_sql_dataset.py  validate_text_to_sql_batch.py
src/data_forge/: __init__.py  cli.py
src/data_forge/core/: __init__.py  gdrive.py  jsonl.py  scoring.py  storage.py
src/data_forge/niches/: __init__.py
src/data_forge/niches/text_to_sql/: __init__.py  eval.py  export.py  gates.py  review.py  shards.py  sqlite_runner.py
tests/: test_storage.py  test_text_to_sql_gates.py  test_text_to_sql_review.py
